tests/neg/i4936b.scala
//> using options -Xfatal-warnings

final object Foo // warn

// nopos-error: No warnings can be incurred under -Werror.